[package]
name = "pong-game"
version = "0.1.0"
authors = ["Marcus Ramberg <marcus.ramberg@gmail.com>"]
edition = "2018"

[[bin]]
name = "pong-game"

[dependencies]
find_folder = "*"
piston = "0.40.0"
piston2d-opengl_graphics = "0.58.0"
pistoncore-glutin_window = "0.52.0"
piston_window = "*"
rand = "*"

[dependencies.piston2d-graphics]
version = "0.29.0"
features = ["glyph_cache_rusttype"]

